--- a/AUTH-SERVICE/src/main/resources/application.yml
+++ b/AUTH-SERVICE/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   #        url: http://localhost:1111/
 
   datasource:
-    url: jdbc:postgresql://pg-200cbd45-ecom-proton.k.aivencloud.com:25379/defaultdb
+    url: ${DB_URL}
     username: ${DB_USER}
     password: ${DB_PASS}
     driver-class-name: org.postgresql.Driver
